# juno-pixels-bot

./: .env.example  .gitignore  Cargo.toml  README.md  juno.yaml
src/: main.rs
